管理者画面の実装とスクリプトインジェクション対策

--- a/styl.css
+++ b/styl.css
@@ -21,11 +21,11 @@ h1{
     color: #3c3c3c;
 }
 
-.btn{
+/* .btn{
     margin:0% 0% 2% 40%;
     height: 30px;
     width: 70px;
-}
+} */
 
 .joho{
     display: inline-block;
